--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,16 +20,18 @@
         <p>{{ site.description | default: site.github.project_tagline }}      
           
           <p>
-          <br>Korea Labor Institute
+          <br>Ph.D. Candidate
+          <br>Department of Economics
+          <br>Indiana University Bloomington
           <br>
           <br><b>E-mail</b>
-            <br><small>shinkang@kli.re.kr or shinkangecon@gmail.com</small>
+            <br><small>sk86@iu.edu</small>
           <br>  
-          <br><b>Phone (Office)</b>
-            <br><small>+82-44-287-6323</small>
+          <br><b>Mobile</b>
+            <br><small>+1-812-391-5909</small>
           <br>  
-          <br><b>Address (Office)</b>
-            <br><small>Room 542, Korea Labor Institute, 30147 Building C, Sejong National Research Complex, 370, Sicheong-daero, Sejong-si, Korea</small>
+          <br><b>Address</b>
+            <br><small>Indiana University Wylie Hall 105, 100 S. Woodlawn Bloomington, IN, 47405-7104, USA</small>
           <br>  
           <br> 
             
