--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
             <br><small>+1-812-391-5909</small>
           <br>  
           <br><b>Address</b>
-            <br><small>Indiana University Wylie Hall 105, 100 S. Woodlawn Bloomington, IN, 47405-7104, USA</small>
+            <br><small>Wylie Hall 105, 100 S. Woodlawn Bloomington, IN, 47405-7104, USA</small>
           <br>  
           <br> 
             
