--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,14 +23,11 @@
           <br>Department of Economics
           <br>Indiana University Bloomington
           <br>
-          <br><b>E-mail</b>
-            <br><small>sk86@iu.edu</small>
+          <br><b>E-mail</b> sk86@iu.edu
           <br>  
-          <br><b>Mobile</b>
-            <br><small>+1-812-391-5909</small>
+          <br><b>Mobile</b> +1-812-391-5909
           <br>  
-          <br><b>Address</b>
-            <br><small>Wylie Hall 105, 100 S. Woodlawn Bloomington, IN, 47405-7104, USA</small>
+          <br><b>Address</b> Wylie Hall 105, 100 S. Woodlawn Bloomington, IN, 47405-7104, USA
           <br>  
           <br> 
             
