--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,8 +27,8 @@
           <br>  
           <br><b>Mobile</b> +1-812-391-5909
           <br>  
-          <br><b>Address</b> Wylie Hall 105, 100 S. Woodlawn Bloomington, IN, 47405-7104, USA
-          <br>  
+          <br><b>Address</b> 
+          <br>Wylie Hall 105, 100 S. Woodlawn Bloomington, IN, 47405-7104, USA  
           <br> 
             
                   
