--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,9 @@
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
         
         <div style="display:inline;float:center">
-        <p>{{ site.description | default: site.github.project_tagline }}      
+        <p>{{ site.description | default: site.github.project_tagline }}
+          
+          <img src="{{site.logo | relative_url}}" alt="Logo"  style="width:230px" />
           
           <p>
           <br>Department of Economics
