--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
           <br>Department of Economics
           <br>Indiana University Bloomington
           <br>
-          <br><b>E-mail</b>
+          <br><b>Email</b>
           <br>sk86@iu.edu
           <br>  
           <br><b>Mobile</b> 
