--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,7 @@
           <img src="{{site.logo | relative_url}}" alt="Logo"  style="width:230px" />
           
           <p>
+          <br>Ph.D. Candidate
           <br>Department of Economics
           <br>Indiana University Bloomington
           <br>          
