--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,18 +23,18 @@
           <img src="{{site.logo | relative_url}}" alt="Logo"  style="width:230px" />
           
           <p>
-          <br>Ph.D. Candidate
-          <br>Department of Economics
-          <br>Indiana University Bloomington
+          <br>Economist
+          <br>Research Department
+          <br>Bank of Korea
           <br>          
           <br><b>Email</b>
-          <br>sk86@iu.edu
+          <br>kangseokil at bok dot or dot kr
           <br>  
           <br><b>Mobile</b> 
-          <br>+1-812-391-5909  
+          <br>+2-1o-8968-oo27
           <br>  
-          <br><b>Address</b> 
-          <br>Wylie Hall 105, 100 S. Woodlawn Bloomington, IN, 47405-7104, USA  
+          <br><b>Address</b>           
+          <br>67, Sejong-daero, Jung-gu, Seoul, Korea
           <br> 
             
                   
