--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,14 +24,15 @@
           
           <p>
           <br>Economist
+          <br>Macroeconomic Model Study Team
           <br>Research Department
           <br>Bank of Korea
           <br>          
           <br><b>Email</b>
-          <br>kangseokil at bok dot or dot kr
+          <br>kangseokil (at) bok (dot) or (dot) kr
           <br>  
           <br><b>Mobile</b> 
-          <br>+2-1o-8968-oo27
+          <br>+2-10-8968-oo27
           <br>  
           <br><b>Address</b>           
           <br>67, Sejong-daero, Jung-gu, Seoul, Korea
