--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
           
           <p>
           <br>Economist
-          <br>Macroeconomic Model Study Team
+          <br>Macroeconomic Modeling Team
           <br>Research Department
           <br>Bank of Korea
           <br>          
