--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
           <p>
           <br>Economist
           <br>Macroeconomic Modeling Team
-          <br>Research Department
+          <br>Office of Economic Modeling and Policy Analysis
           <br>Bank of Korea
           <br>          
           <br><b>Email</b>
